# wordle-os

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/: fontconvert.py
src/: cozette.rs  draw_target.rs  main.rs  vga_hires_target.rs  vga_target.rs
