[package]
name = "wordle-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
vga = { git = "https://github.com/clavierpaul/vga" }
embedded-graphics = "0.7.1"
embedded-layout = "0.2.0"